@@ -793,7 +793,7 @@ public class GuideScreen extends GuiContainer
             .getNavigation()
             .recallNavigationState(guideId);
         LinkedHashSet<ResourceLocation> updated = new LinkedHashSet<>(
-            saved.expandedPageIds() != null ? saved.expandedPageIds() : Collections.<ResourceLocation>emptySet());
+            saved.expandedPageIds() != null ? saved.expandedPageIds() : Collections.emptySet());
         if (expanded) {
             updated.add(pageId);
         } else {
@@ -896,11 +896,6 @@ public class GuideScreen extends GuiContainer
             return;
         }
         guideEditorSuppressTextFocusUntilGuideHotkeyRelease = false;
-    }
-
-    @Override
-    public boolean doesGuiPauseGame() {
-        return false;
     }
 
     @Override
@@ -1921,7 +1916,6 @@ public class GuideScreen extends GuiContainer
                 runGuideEditorTextMutation(
                     () -> guideEditorTextArea
                         .applyEdit(result.getText(), result.getSelectionStart(), result.getSelectionEnd()));
-                return;
         }
     }
 
@@ -2192,9 +2186,7 @@ public class GuideScreen extends GuiContainer
             ensureLayout();
             clampScroll();
         } else if (btn == btnSearch) {
-            if (isSearchPage()) {
-                return;
-            } else if (currentRoute != null && currentRoute.isHome()) {
+            if (isSearchPage()) {} else if (currentRoute != null && currentRoute.isHome()) {
                 restoreViewState(GuideScreenViewState.of(GuideScreenRoute.homeSearch(""), 0));
                 focusSearchField();
             } else {
@@ -2259,7 +2251,7 @@ public class GuideScreen extends GuiContainer
                 ResourceLocation prevGuideId = prev.route() != null ? prev.route()
                     .guideId() : null;
                 ResourceLocation oldGuideId = guide != null ? guide.getId() : null;
-                boolean guideChanged = !java.util.Objects.equals(oldGuideId, prevGuideId);
+                boolean guideChanged = !Objects.equals(oldGuideId, prevGuideId);
                 Set<ResourceLocation> carryOver = guideChanged ? navBar.getExpandedPageIdsSnapshot() : null;
                 restoreViewState(prev);
                 if (guideChanged) {
@@ -2297,7 +2289,7 @@ public class GuideScreen extends GuiContainer
                 ResourceLocation nextGuideId = next.route() != null ? next.route()
                     .guideId() : null;
                 ResourceLocation oldGuideId = guide != null ? guide.getId() : null;
-                boolean guideChanged = !java.util.Objects.equals(oldGuideId, nextGuideId);
+                boolean guideChanged = !Objects.equals(oldGuideId, nextGuideId);
                 Set<ResourceLocation> carryOver = guideChanged ? navBar.getExpandedPageIdsSnapshot() : null;
                 restoreViewState(next);
                 if (guideChanged) {
@@ -2521,8 +2513,8 @@ public class GuideScreen extends GuiContainer
     private static void registerRuntimeScenes(GuidePage page) {
         LytDocument doc = page.document();
         if (doc == null) return;
-        java.util.List<LytGuidebookScene> list = page.scenes();
-        java.util.ArrayDeque<LytNode> pending = new java.util.ArrayDeque<>();
+        List<LytGuidebookScene> list = page.scenes();
+        ArrayDeque<LytNode> pending = new ArrayDeque<>();
         pending.add(doc);
         int found = 0;
         while (!pending.isEmpty()) {
@@ -3859,14 +3851,10 @@ public class GuideScreen extends GuiContainer
      */
     private static String formatBottomBar(String sourceDisplay, String authorsStr, @Nullable String dateVal,
         @Nullable String updatedVal) {
-        String authorPart = authorsStr.isEmpty() ? ""
-            : GuidebookText.PageMetaAuthor.text("\u00A7o" + authorsStr + "\u00A7r\u00A77");
-        String datePart = dateVal != null ? GuidebookText.PageMetaDate.text("\u00A7o" + dateVal + "\u00A7r\u00A77")
-            : "";
-        String updatedPart = updatedVal != null
-            ? GuidebookText.PageMetaUpdated.text("\u00A7o" + updatedVal + "\u00A7r\u00A77")
-            : "";
-        return GuidebookText.PageMetaContentFrom.text("\u00A7o" + sourceDisplay + "\u00A7r\u00A77") + authorPart
+        String authorPart = authorsStr.isEmpty() ? "" : GuidebookText.PageMetaAuthor.text("§o" + authorsStr + "§r§7");
+        String datePart = dateVal != null ? GuidebookText.PageMetaDate.text("§o" + dateVal + "§r§7") : "";
+        String updatedPart = updatedVal != null ? GuidebookText.PageMetaUpdated.text("§o" + updatedVal + "§r§7") : "";
+        return GuidebookText.PageMetaContentFrom.text("§o" + sourceDisplay + "§r§7") + authorPart
             + datePart
             + updatedPart;
     }
@@ -4270,7 +4258,7 @@ public class GuideScreen extends GuiContainer
         FontRenderer itemFont = GuideItemTooltipRenderSupport.resolveFont(stack, mc.fontRenderer);
         LytRect bounds = resolveTooltipBounds(interaction);
         TooltipLayout itemLayout = computeHoveringTextLayout(itemLines, mouseX, mouseY, itemFont, bounds);
-        String coordText = "\u00a76" + pos[0] + ", " + pos[1] + ", " + pos[2];
+        String coordText = "§6" + pos[0] + ", " + pos[1] + ", " + pos[2];
         // §6 = gold color; the coordinate tooltip renders above the main block tooltip.
         // drawHoveringText(list, x, y, font) draws starting at (x+12, y-12).
         // We want the debug tooltip to appear above the default position (mouseY - 12).
@@ -4346,9 +4334,9 @@ public class GuideScreen extends GuiContainer
             boxTop = anchorLayout.boxBottom() + gap;
         }
         int maxBoxLeft = Math.max(bounds.x() + margin, bounds.right() - margin - boxWidth);
-        boxLeft = Math.max(bounds.x() + margin, Math.min(boxLeft, maxBoxLeft));
+        boxLeft = Math.clamp(boxLeft, bounds.x() + margin, maxBoxLeft);
         int maxBoxTop = Math.max(bounds.y() + margin, bounds.bottom() - margin - boxHeight);
-        boxTop = Math.max(bounds.y() + margin, Math.min(boxTop, maxBoxTop));
+        boxTop = Math.clamp(boxTop, bounds.y() + margin, maxBoxTop);
 
         int textX = boxLeft + 3;
         int textY = boxTop + 4;
@@ -4986,7 +4974,7 @@ public class GuideScreen extends GuiContainer
             }
             Integer markerTarget = scrollbarOutline.findJumpTarget(mouseX, mouseY);
             if (markerTarget != null) {
-                scrollY = markerTarget.intValue();
+                scrollY = markerTarget;
                 clampScroll();
                 snapVisualScrollToTarget();
                 return;
@@ -5763,9 +5751,7 @@ public class GuideScreen extends GuiContainer
             draggingDocument = false;
             return;
         }
-        if (state == 0) {
-            return;
-        }
+        if (state == 0) {}
     }
 
     @Nullable
@@ -6939,7 +6925,7 @@ public class GuideScreen extends GuiContainer
     }
 
     private int withAlpha(int argb, int alpha) {
-        int clampedAlpha = Math.max(0, Math.min(255, alpha));
+        int clampedAlpha = Math.clamp(alpha, 0, 255);
         return (argb & 0x00FFFFFF) | (clampedAlpha << 24);
     }
 
